ui/main/src/scss/styles.scss
/* ... */
.modal-usercard{
  max-width: 1300px;
}

.modal-body{
  background-color: var(--opfab-bgcolor);
  color: var(--opfab-textcolor);
  font-size: 16px;
  font-weight: 400;
}

.modal-header{
  background-color: var(--opfab-bgcolor);
  height: 60px;
  font-size: 20px;
  font-weight: bold;
  color: var(--opfab-color-darker)
}

.opfab-close-modal-icon{
  color:var(--opfab-navbar-color);
  margin-left: 5px;
  margin-right: 5px;
  letter-spacing: 0.54px;
  line-height: 30px;
  font-size: 30px;
  cursor: pointer;
  &:hover,
  &:focus {
    color:var( --opfab-navbar-color-hover);
  }
}

// Specific configuration for modal in administration interface 
.cdk-overlay-container, .cdk-overlay-pane {
  z-index: 9999 !important;
}

// Global colors 

.opfab-colors {
  background-color: var(--opfab-bgcolor);
  color: var(--opfab-text-color);
}

.opfab-color-danger {
  color : red;
}

.opfab-color-warning {
  color : #ff6600;
}
.opfab-color-success  {
  color: green;
}

.opfab-timeline-bgcolor {
  background-color: var(--opfab-timeline-bgcolor);
}

.opfab-popover {
  background-color: var(--opfab-popover-bgcolor);
  color: var(--opfab-text-color);
  .popover-header {
    color: var(--opfab-text-color);
    background-color: var(--opfab-popover-bgcolor);
    border-bottom: 1px solid var(--opfab-text-color);
  }
  .popover-body {
    color: var(--opfab-text-color);
  }
  .arrow::after{
    border-right-color: var(--opfab-popover-bgcolor);
  }
}

.opfab-popover-left-menu {
  background-color: var(--opfab-popover-bgcolor);
  color: var(--opfab-text-color);
  min-width: 330px !important;
  padding-right: 0px;
  .popover-header {
    color: var(--opfab-text-color);
    background-color: var(--opfab-popover-bgcolor);
    border-bottom: 1px solid var(--opfab-text-color);
  }
  .popover-body {
    color: var(--opfab-text-color);
  }
  .arrow::after{
    border-right-color: var(--opfab-popover-bgcolor);
  }
}

.opfab-popover-no-arrow {
  background-color: var(--opfab-popover-bgcolor);
  color: var(--opfab-text-color);
  .popover-header {
    color: var(--opfab-text-color);
    background-color: var(--opfab-popover-bgcolor);
    border-bottom: 1px solid var(--opfab-text-color);
  }
  .popover-body {
    color: var(--opfab-text-color);
  }

  .arrow {
    display: none;
  }
  .arrow::after{
    border-bottom: 0px;
  }
}

// OpFab customization of the alpine theme for ag-grid
// It allows the colors to match the ones from the OpFab global style and to respond to the night/day mode
.opfab-ag-grid-theme {
  @include ag-theme-alpine((
          background-color: var(--opfab-bgcolor),
          header-background-color: var(--opfab-bgcolor-darker),
          odd-row-background-color: var(--opfab-bgcolor-darker),
          modal-overlay-background-color: var(--opfab-bgcolor),
          data-color: var(--opfab-text-color),
          header-foreground-color: var(--opfab-text-color),
          secondary-foreground-color: var(--opfab-text-color),
          input-disabled-background-color: var(--opfab-button-disable-bgcolor),
          input-disabled-border-color: var(--opfab-button-disable-bgcolor),
          header-column-resize-handle-color: var(--opfab-table-border-color),
          borders: false,
          header-height: 70,

  ));


  // This is done to reduce min-height (150px by default) in order to remove empty space when there is 1 line or 2
  // The height of a line is 42 (40 + 1*2 padding)
  .ag-layout-auto-height {
    .ag-center-cols-clipper, .ag-center-cols-container, .ag-body-viewport {
      min-height: 42px;
    }
  }

  color: var(--opfab-text-color);

  .ag-root-wrapper {
    border-bottom: 1px solid var(--opfab-table-border-color);
  }

  .ag-theme-alpine {
    color: var(--opfab-text-color);
  }

  .ag-menu {
    background: var(--opfab-bgcolor-darker);
  }

  .ag-header-row {
    border-top: 1px solid var(--opfab-table-border-color);
    border-bottom: 1px solid var(--opfab-table-border-color);
  }

  .ag-row {
    border: 0px ;
  }

  .ag-row:hover{
    border: 2px solid #2268FF;
  }


  .opfab-ag-header-with-no-padding {
    padding-left: 0px;
    padding-right: 0px;
  }

  .action-cell-delete-admin {
    display: none;
  }
  .opfab-sev-alarm {background-color: $sev-alarm;font-size: 0px;
    padding-right: 0px;}
  .opfab-sev-action {background-color: $sev-action;font-size: 0px; 
    padding-right: 0px;}
  .opfab-sev-compliant {background-color: $sev-compliant;font-size: 0px; 
    padding-right: 0px;}
  .opfab-sev-information {background-color: $sev-information;font-size: 0px;
    padding-right: 0px; }

  .ag-cell-wrap-text {
    word-break: normal;
  }
}

.ag-popup {
  @extend .opfab-ag-grid-theme;
}
/* ... */

